--- a/app/src/js/nested_list/style/nested_list.less
+++ b/app/src/js/nested_list/style/nested_list.less
@@ -3,7 +3,6 @@
   max-height: 1000px;
   opacity: 1;
   will-change: transform;
-  content-visibility: auto;
   border-radius: 10px;
   margin: 10px;
   margin-bottom: 0;
